--- a/POCMeetApp/app/src/main/res/values/strings.xml
+++ b/POCMeetApp/app/src/main/res/values/strings.xml
@@ -21,4 +21,10 @@
     <string name="title_activity_search">SearchActivity</string>
     <string name="search">Search</string>
 
+    <string-array name="search_categorys">
+        <item>MeetUpp</item>
+        <item>Participant</item>
+
+    </string-array>
+
 </resources>
